1999-03-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-native-method): Take phase argument.
	(java-print-native-class): Loop over creating and using phase,
	passing to java-print-native-method.
	(with-protocol-c-file): Use .m files.

1999-02-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (all, stubs): Mark as phony.
	(stubs): Depend on Makefile.conf and $(MAKEFILES).
	(all): Depend on stubs.
	(Makefile.common $(MAKEFILES)): Depend on java-stub.elc
	and module headers.

	* java-stub.el (*java-path*, *c-path*): New constants.
	(with-protocol-c-file): Use *c-path*.
	(*stub-directory*): Remove.
	(module-path): Don't use *stub-directory*.
	(java-print-makefiles): Simplify to use templates.  Generate
	only Makefile.common with protocol and module lists, and
	per-module Makefiles.
	(java-print-classes): Use *java-path* instead of literal.

	* Makefile.am (stubs): Run stub generation in c and swarm
	directories.

1999-02-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (removed-method-p): Avoid all methods with an
	ellipsis argument.
	(java-print-methods-in-phase): Remove.
	(java-print-interface-methods-in-phase): Loop over protocol
	methods.
	(java-print-class-methods-in-phase): Loop over expanded list of
	methods.
	(*objc-to-java-type-alist*): Treat void*, ref_t, val_t, Protocol*,
	and unsigned long long int as freaky.
	(java-objc-to-java-type): Renamed from java-type-for-objc-type.
	(with-protocol-java-file): Renamed from with-protocol-file.
	(with-protocol-c-file): New macro.
	(mangle-signature, java-type-to-signature,
	java-type-to-native-type, java-argument-convert,
	java-argument-empty-p, java-print-native-method,
	java-print-native-class): New functions.
	(java-print-classes): Call java-print-native-class.
	(java-run-all): Pass :uniquify-method-lists t.
	(module-path): New function.
	(with-protocol-{c,java}-file): Use it.
	(java-print-interface-name): Removed.